# Stable-Diffusion

./: .gitignore  README.md  inference_vae.py  justfile  lpips_trainer.py  main.py  prepare_CC.py  pyproject.toml  requirements.txt  vae_trainer.py
configs/: ldm.yaml  vae_train.yaml
data_utlis/: dataset.py
helpers/: __init__.py  dataset.py  utils.py
modules/: __init__.py  config.py  discriminator.py  layers.py  lpips.py  transformer.py  unet.py  vae.py
scripts/: prepare_CC.sh  train_lpips.sh  train_vae.sh  tsv2parquet.sh
