[project]
name = "stable-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "img2dataset>=1.47.0",
    "kaggle>=1.8.4",
    "lpips>=0.1.4",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
]
